# SdME

./: CMakeLists.txt  Projeto-Final.c  diagram.json  wokwi.toml
lcd1602/: lcd1602.c  lcd1602.h
tm1637/: tm1637.c
